[package]
name = "httpwsgunrs"
version = "0.1.0"
authors = ["Lightnet <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
actix-files = "0.2.1"
serde_json = "1"
futures = "0.3"
rand = "0.7.3"
gunrs = { version = "0.1.0", path="../gunrs" }